--- a/Classes/Themes/HKVideoPlayerClassicalTheme.xib
+++ b/Classes/Themes/HKVideoPlayerClassicalTheme.xib
@@ -56,17 +56,20 @@
                     <subviews>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="nnb-xM-uT1">
                             <rect key="frame" x="6" y="10" width="205" height="31"/>
-                        </slider>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2h-mt-zrE">
-                            <rect key="frame" x="275" y="10" width="50" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="50" id="2Og-zl-Ttz"/>
-                                <constraint firstAttribute="height" constant="30" id="iXu-cO-NyF"/>
+                                <constraint firstAttribute="width" constant="138" id="3Fx-Lm-SMM"/>
                             </constraints>
-                            <state key="normal" title="||">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="3Fx-Lm-SMM"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="3Fx-Lm-SMM"/>
+                                </mask>
+                            </variation>
+                        </slider>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3H-Bx-Avf">
                             <rect key="frame" x="338" y="10" width="50" height="30"/>
                             <constraints>
@@ -76,6 +79,13 @@
                             <state key="normal" title=">">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                <rect key="frame" x="238" y="10" width="50" height="30"/>
+                                <mask key="constraints">
+                                    <exclude reference="Ah5-wv-bfh"/>
+                                    <exclude reference="VH8-jH-hnv"/>
+                                </mask>
+                            </variation>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gI9-GY-6eN">
                             <rect key="frame" x="217" y="10" width="50" height="30"/>
@@ -83,21 +93,99 @@
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2h-mt-zrE">
+                            <rect key="frame" x="275" y="10" width="50" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="2Og-zl-Ttz"/>
+                                <constraint firstAttribute="width" constant="50" id="VLI-wV-2rH"/>
+                                <constraint firstAttribute="height" constant="30" id="iXu-cO-NyF"/>
+                                <constraint firstAttribute="height" constant="31" id="yqT-40-X6v"/>
+                            </constraints>
+                            <state key="normal" title="||">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="VLI-wV-2rH"/>
+                                    <exclude reference="yqT-40-X6v"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="constraints">
+                                    <exclude reference="2Og-zl-Ttz"/>
+                                    <include reference="VLI-wV-2rH"/>
+                                    <exclude reference="iXu-cO-NyF"/>
+                                    <include reference="yqT-40-X6v"/>
+                                </mask>
+                            </variation>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstItem="P2h-mt-zrE" firstAttribute="leading" secondItem="gI9-GY-6eN" secondAttribute="trailing" constant="8" id="1Ox-tD-s9f"/>
                         <constraint firstItem="nnb-xM-uT1" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="2iN-cL-Puv"/>
+                        <constraint firstAttribute="centerX" secondItem="P2h-mt-zrE" secondAttribute="centerX" id="5jp-Fc-GKN"/>
                         <constraint firstItem="D3H-Bx-Avf" firstAttribute="leading" secondItem="P2h-mt-zrE" secondAttribute="trailing" constant="13" id="5uP-wg-vhT"/>
+                        <constraint firstItem="P2h-mt-zrE" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="AWj-2S-W6q"/>
                         <constraint firstItem="gI9-GY-6eN" firstAttribute="leading" secondItem="nnb-xM-uT1" secondAttribute="trailing" constant="8" id="CK4-ID-4Yh"/>
+                        <constraint firstAttribute="height" constant="81" id="UKQ-95-cYQ"/>
                         <constraint firstItem="gI9-GY-6eN" firstAttribute="width" secondItem="P2h-mt-zrE" secondAttribute="height" multiplier="5:3" id="W8l-FT-AC7"/>
                         <constraint firstItem="D3H-Bx-Avf" firstAttribute="width" secondItem="P2h-mt-zrE" secondAttribute="height" multiplier="5:3" id="WKw-Dd-Up5"/>
+                        <constraint firstItem="P2h-mt-zrE" firstAttribute="width" secondItem="D3H-Bx-Avf" secondAttribute="height" multiplier="5:3" id="WaQ-8v-g3B"/>
                         <constraint firstAttribute="centerX" secondItem="P2h-mt-zrE" secondAttribute="centerX" id="Yti-dP-J1s"/>
                         <constraint firstItem="P2h-mt-zrE" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="axL-5w-bi8"/>
                         <constraint firstItem="nnb-xM-uT1" firstAttribute="leading" secondItem="aWd-cP-YCa" secondAttribute="leading" constant="8" id="b1r-9C-KYC"/>
+                        <constraint firstItem="gI9-GY-6eN" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="cbK-IG-1IU"/>
+                        <constraint firstItem="gI9-GY-6eN" firstAttribute="width" secondItem="P2h-mt-zrE" secondAttribute="height" multiplier="50:31" id="e10-LD-mZs"/>
+                        <constraint firstItem="P2h-mt-zrE" firstAttribute="centerX" secondItem="nnb-xM-uT1" secondAttribute="centerX" id="eoL-Su-N8o"/>
                         <constraint firstItem="P2h-mt-zrE" firstAttribute="leading" secondItem="gI9-GY-6eN" secondAttribute="trailing" constant="8" id="g3R-iW-ad9"/>
+                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="mho-on-RzS"/>
                         <constraint firstItem="gI9-GY-6eN" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="mp4-W5-7Eu"/>
+                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="leading" secondItem="P2h-mt-zrE" secondAttribute="trailing" constant="13" id="oDh-xo-bpS"/>
+                        <constraint firstItem="nnb-xM-uT1" firstAttribute="top" secondItem="P2h-mt-zrE" secondAttribute="bottom" constant="2" id="udc-dn-02x"/>
                         <constraint firstItem="D3H-Bx-Avf" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="wFQ-7W-IfX"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="UKQ-95-cYQ"/>
+                            <exclude reference="cbK-IG-1IU"/>
+                            <exclude reference="e10-LD-mZs"/>
+                            <exclude reference="udc-dn-02x"/>
+                            <exclude reference="1Ox-tD-s9f"/>
+                            <exclude reference="5jp-Fc-GKN"/>
+                            <exclude reference="AWj-2S-W6q"/>
+                            <exclude reference="WaQ-8v-g3B"/>
+                            <exclude reference="eoL-Su-N8o"/>
+                            <exclude reference="mho-on-RzS"/>
+                            <exclude reference="oDh-xo-bpS"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="UKQ-95-cYQ"/>
+                            <exclude reference="CK4-ID-4Yh"/>
+                            <exclude reference="W8l-FT-AC7"/>
+                            <include reference="cbK-IG-1IU"/>
+                            <include reference="e10-LD-mZs"/>
+                            <exclude reference="mp4-W5-7Eu"/>
+                            <exclude reference="2iN-cL-Puv"/>
+                            <exclude reference="b1r-9C-KYC"/>
+                            <include reference="udc-dn-02x"/>
+                            <include reference="1Ox-tD-s9f"/>
+                            <include reference="5jp-Fc-GKN"/>
+                            <include reference="AWj-2S-W6q"/>
+                            <include reference="WaQ-8v-g3B"/>
+                            <exclude reference="Yti-dP-J1s"/>
+                            <exclude reference="axL-5w-bi8"/>
+                            <include reference="eoL-Su-N8o"/>
+                            <exclude reference="g3R-iW-ad9"/>
+                            <exclude reference="5uP-wg-vhT"/>
+                            <exclude reference="WKw-Dd-Up5"/>
+                            <include reference="mho-on-RzS"/>
+                            <include reference="oDh-xo-bpS"/>
+                            <exclude reference="wFQ-7W-IfX"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.6025244756" green="0.8068765228" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -107,13 +195,36 @@
                 <constraint firstItem="3Vq-xs-obH" firstAttribute="trailing" secondItem="aWd-cP-YCa" secondAttribute="trailing" id="EdF-po-AFc"/>
                 <constraint firstAttribute="trailing" secondItem="3Vq-xs-obH" secondAttribute="trailing" id="HBH-Lo-Lzf"/>
                 <constraint firstItem="aWd-cP-YCa" firstAttribute="height" secondItem="3Vq-xs-obH" secondAttribute="height" id="Pts-Nn-42t"/>
+                <constraint firstItem="aWd-cP-YCa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Ww2-mh-hwc"/>
                 <constraint firstItem="3Vq-xs-obH" firstAttribute="leading" secondItem="aWd-cP-YCa" secondAttribute="leading" id="X68-iP-Ubm"/>
+                <constraint firstAttribute="bottom" secondItem="aWd-cP-YCa" secondAttribute="bottom" id="huE-qp-G1K"/>
+                <constraint firstAttribute="trailing" secondItem="aWd-cP-YCa" secondAttribute="trailing" id="jWg-Nu-ihr"/>
                 <constraint firstAttribute="bottom" secondItem="3Vq-xs-obH" secondAttribute="bottom" constant="550" id="nGc-cp-rJg"/>
                 <constraint firstItem="3Vq-xs-obH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="rcM-Px-ueZ"/>
                 <constraint firstItem="3Vq-xs-obH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="tDJ-xw-Ctm"/>
                 <constraint firstAttribute="trailing" secondItem="aWd-cP-YCa" secondAttribute="trailing" id="tgZ-iP-uhd"/>
             </constraints>
-            <point key="canvasLocation" x="137" y="155"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="Ww2-mh-hwc"/>
+                    <exclude reference="huE-qp-G1K"/>
+                    <exclude reference="jWg-Nu-ihr"/>
+                </mask>
+            </variation>
+            <variation key="heightClass=regular-widthClass=compact">
+                <mask key="constraints">
+                    <exclude reference="EdF-po-AFc"/>
+                    <exclude reference="X68-iP-Ubm"/>
+                    <exclude reference="28g-y1-hwI"/>
+                    <exclude reference="9Yu-HS-w9n"/>
+                    <exclude reference="Pts-Nn-42t"/>
+                    <include reference="Ww2-mh-hwc"/>
+                    <include reference="huE-qp-G1K"/>
+                    <include reference="jWg-Nu-ihr"/>
+                    <exclude reference="tgZ-iP-uhd"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="100" y="185"/>
         </view>
     </objects>
 </document>
