--- a/Classes/Themes/HKVideoPlayerClassicalTheme.xib
+++ b/Classes/Themes/HKVideoPlayerClassicalTheme.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -29,7 +28,7 @@
                             </connections>
                         </button>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="n7g-Qq-KVI">
-                            <rect key="frame" x="60" y="10" width="483" height="31"/>
+                            <rect key="frame" x="60" y="10" width="480" height="31"/>
                             <connections>
                                 <action selector="onTouchCancel:" destination="iN0-l3-epB" eventType="touchCancel" id="HCu-Ti-aDL"/>
                                 <action selector="onTouchDown:" destination="iN0-l3-epB" eventType="touchDown" id="9fA-Jl-6vU"/>
@@ -54,14 +53,14 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="4ya-6v-6Te" secondAttribute="trailing" constant="8" id="CuL-uS-XBZ"/>
-                        <constraint firstItem="n7g-Qq-KVI" firstAttribute="leading" secondItem="P7l-JH-chL" secondAttribute="trailing" constant="8" id="H5j-kJ-lvT"/>
-                        <constraint firstItem="4ya-6v-6Te" firstAttribute="leading" secondItem="n7g-Qq-KVI" secondAttribute="trailing" constant="5" id="JCD-11-b9r"/>
+                        <constraint firstAttribute="bottom" secondItem="n7g-Qq-KVI" secondAttribute="bottom" constant="10" id="Gq6-gz-h6y"/>
                         <constraint firstAttribute="height" constant="50" id="Kf2-ee-Jka"/>
                         <constraint firstItem="P7l-JH-chL" firstAttribute="centerY" secondItem="3Vq-xs-obH" secondAttribute="centerY" id="NuL-8z-QMk"/>
                         <constraint firstAttribute="bottom" secondItem="4ya-6v-6Te" secondAttribute="bottom" constant="10" id="Sec-lX-wxd"/>
                         <constraint firstItem="P7l-JH-chL" firstAttribute="leading" secondItem="3Vq-xs-obH" secondAttribute="leading" constant="8" id="YRP-ap-xk3"/>
-                        <constraint firstAttribute="bottom" secondItem="n7g-Qq-KVI" secondAttribute="bottom" constant="10" id="fW8-Fn-zMo"/>
+                        <constraint firstItem="4ya-6v-6Te" firstAttribute="leading" secondItem="n7g-Qq-KVI" secondAttribute="trailing" constant="8" id="i1d-VQ-7mi"/>
                         <constraint firstAttribute="bottom" secondItem="P7l-JH-chL" secondAttribute="bottom" constant="10" id="oxw-HR-Vwe"/>
+                        <constraint firstItem="n7g-Qq-KVI" firstAttribute="leading" secondItem="P7l-JH-chL" secondAttribute="trailing" constant="8" id="wFR-Gn-K8Y"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -94,26 +93,6 @@
                                 </mask>
                             </variation>
                         </slider>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3H-Bx-Avf">
-                            <rect key="frame" x="338" y="10" width="50" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="Ah5-wv-bfh"/>
-                                <constraint firstAttribute="width" constant="50" id="VH8-jH-hnv"/>
-                            </constraints>
-                            <state key="normal" title=">">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                <rect key="frame" x="238" y="10" width="50" height="30"/>
-                                <mask key="constraints">
-                                    <exclude reference="Ah5-wv-bfh"/>
-                                    <exclude reference="VH8-jH-hnv"/>
-                                </mask>
-                            </variation>
-                            <connections>
-                                <action selector="onTapNextButton:" destination="iN0-l3-epB" eventType="touchUpOutside" id="pfv-jQ-LfY"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gI9-GY-6eN">
                             <rect key="frame" x="217" y="10" width="50" height="30"/>
                             <state key="normal" title="&lt;">
@@ -152,18 +131,30 @@
                                 <action selector="onTapPlayButton:" destination="iN0-l3-epB" eventType="touchUpOutside" id="5bI-Fi-qB7"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3H-Bx-Avf">
+                            <rect key="frame" x="333" y="10" width="50" height="30"/>
+                            <state key="normal" title=">">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                <rect key="frame" x="238" y="10" width="50" height="30"/>
+                            </variation>
+                            <connections>
+                                <action selector="onTapNextButton:" destination="iN0-l3-epB" eventType="touchUpOutside" id="pfv-jQ-LfY"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="P2h-mt-zrE" firstAttribute="leading" secondItem="gI9-GY-6eN" secondAttribute="trailing" constant="8" id="1Ox-tD-s9f"/>
                         <constraint firstItem="nnb-xM-uT1" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="2iN-cL-Puv"/>
                         <constraint firstAttribute="centerX" secondItem="P2h-mt-zrE" secondAttribute="centerX" id="5jp-Fc-GKN"/>
-                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="leading" secondItem="P2h-mt-zrE" secondAttribute="trailing" constant="13" id="5uP-wg-vhT"/>
                         <constraint firstItem="P2h-mt-zrE" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="AWj-2S-W6q"/>
                         <constraint firstItem="gI9-GY-6eN" firstAttribute="leading" secondItem="nnb-xM-uT1" secondAttribute="trailing" constant="8" id="CK4-ID-4Yh"/>
+                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="NJ9-uB-Gl5"/>
                         <constraint firstAttribute="height" constant="81" id="UKQ-95-cYQ"/>
+                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="leading" secondItem="P2h-mt-zrE" secondAttribute="trailing" constant="8" id="Vfz-50-hkD"/>
                         <constraint firstItem="gI9-GY-6eN" firstAttribute="width" secondItem="P2h-mt-zrE" secondAttribute="height" multiplier="5:3" id="W8l-FT-AC7"/>
-                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="width" secondItem="P2h-mt-zrE" secondAttribute="height" multiplier="5:3" id="WKw-Dd-Up5"/>
                         <constraint firstItem="P2h-mt-zrE" firstAttribute="width" secondItem="D3H-Bx-Avf" secondAttribute="height" multiplier="5:3" id="WaQ-8v-g3B"/>
                         <constraint firstAttribute="centerX" secondItem="P2h-mt-zrE" secondAttribute="centerX" id="Yti-dP-J1s"/>
                         <constraint firstItem="P2h-mt-zrE" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="axL-5w-bi8"/>
@@ -176,7 +167,7 @@
                         <constraint firstItem="gI9-GY-6eN" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="mp4-W5-7Eu"/>
                         <constraint firstItem="D3H-Bx-Avf" firstAttribute="leading" secondItem="P2h-mt-zrE" secondAttribute="trailing" constant="13" id="oDh-xo-bpS"/>
                         <constraint firstItem="nnb-xM-uT1" firstAttribute="top" secondItem="P2h-mt-zrE" secondAttribute="bottom" constant="2" id="udc-dn-02x"/>
-                        <constraint firstItem="D3H-Bx-Avf" firstAttribute="top" secondItem="aWd-cP-YCa" secondAttribute="top" constant="10" id="wFQ-7W-IfX"/>
+                        <constraint firstItem="P2h-mt-zrE" firstAttribute="width" secondItem="D3H-Bx-Avf" secondAttribute="width" id="wVO-mu-woR"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -212,11 +203,8 @@
                             <exclude reference="axL-5w-bi8"/>
                             <include reference="eoL-Su-N8o"/>
                             <exclude reference="g3R-iW-ad9"/>
-                            <exclude reference="5uP-wg-vhT"/>
-                            <exclude reference="WKw-Dd-Up5"/>
                             <include reference="mho-on-RzS"/>
                             <include reference="oDh-xo-bpS"/>
-                            <exclude reference="wFQ-7W-IfX"/>
                         </mask>
                     </variation>
                 </view>
